' Generated by UML Generator
' Encoded: hPN1JiCm38RlVOeSExPAd2SqWJQGa01Dm0rno5AhMBH9bQGSWBqxQPkqIREn0rocpVR_n_xYjPTAKwcRgapKE_AQIbeHLbAbhhIMk6iqt3B1d_0Jo7doXZaGXfALa2HT5LcN25m3-Ke8oRYeTXAMvCb8UT56c90IX1_9KG9ZABWVpCp7t5gbeSk2X1uB4ZdCMdK1-g4JfZFFUQw6S6XhYZu4vbQvxew8b3OSDX0gDwwPI3ncueQjnTvHlAV8EuJpBtCV6jcUL2QKKbae9tfvZMHRo34NFVjQYhnXMfZwErJwOcj_hxfhwD4ktNKDp7k7T9ftH9s9QgUBRDifnugZ3KnGsrkU-Srqi6qYwcMKqq92GQLpJkibST-zAaPBrfHKFWjDo_QSN3IxiZkc4afBAXz1DHNuLpOYjNx75hesLud2yxGSNKlJvGth_xwfsyuld4eDuSbfCPE-xWRvb8mM_Mc_CTbWWGPfZqRJYdAn0SNCajAZGApc19S5EMpdU3q7sMZwIVg8rp_Jk465pEu9Cti5r_pZbyteoqzoY9rcmpFAPQBvlTG1_P_djeyPaMN3y2vsPcBkRpnTaopxNdc245kOl0IUctVG3m
' URL: http://www.plantuml.com/plantuml/uml/hPN1JiCm38RlVOeSExPAd2SqWJQGa01Dm0rno5AhMBH9bQGSWBqxQPkqIREn0rocpVR_n_xYjPTAKwcRgapKE_AQIbeHLbAbhhIMk6iqt3B1d_0Jo7doXZaGXfALa2HT5LcN25m3-Ke8oRYeTXAMvCb8UT56c90IX1_9KG9ZABWVpCp7t5gbeSk2X1uB4ZdCMdK1-g4JfZFFUQw6S6XhYZu4vbQvxew8b3OSDX0gDwwPI3ncueQjnTvHlAV8EuJpBtCV6jcUL2QKKbae9tfvZMHRo34NFVjQYhnXMfZwErJwOcj_hxfhwD4ktNKDp7k7T9ftH9s9QgUBRDifnugZ3KnGsrkU-Srqi6qYwcMKqq92GQLpJkibST-zAaPBrfHKFWjDo_QSN3IxiZkc4afBAXz1DHNuLpOYjNx75hesLud2yxGSNKlJvGth_xwfsyuld4eDuSbfCPE-xWRvb8mM_Mc_CTbWWGPfZqRJYdAn0SNCajAZGApc19S5EMpdU3q7sMZwIVg8rp_Jk465pEu9Cti5r_pZbyteoqzoY9rcmpFAPQBvlTG1_P_djeyPaMN3y2vsPcBkRpnTaopxNdc245kOl0IUctVG3m
' Generated on: 2025-12-01T09:36:03.499829400

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -productos: List<Producto>
  -cliente: Cliente
  --
  +Pedido(cliente: Cliente)
  +getProductos(): List<Producto>
  +setProductos(productos: List<Producto>): void
  +getCliente(): Cliente
  +setCliente(cliente: Cliente): void
  +agregarProducto(p: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): String
}

class Producto {
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecio(): double
  +setPrecio(precio: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoDigital {
  -tamanoDescarga: double
  --
  +ProductoDigital(nombre: String, precio: double, tamanoDescarga: double)
  +getTamanoDescarga(): double
  +setTamanoDescarga(tamanoDescarga: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +getCosteEnvio(): double
  +setCosteEnvio(costeEnvio: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

Pedido o-- Producto
Pedido *-- Cliente
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml